# chat-collector

./: .gitignore  pyproject.toml
.symphony/: WORKFLOW.template.md  run.sh
docs/research/: agent-execution-inventory.md  antigravity-editor-view-local-artifacts.md  claude-code-cli-local-artifacts.md  claude-code-ide-local-artifacts.md  codex-app-local-artifacts.md  codex-cli-local-artifacts.md  codex-ide-extension-local-artifacts.md  cursor-cli-local-artifacts.md  cursor-editor-local-artifacts.md  gemini-cli-local-artifacts.md  gemini-code-assist-ide-local-artifacts.md  windsurf-editor-cascade-local-artifacts.md
src/llm_chat_archive/: __init__.py  cli.py  models.py  registry.py
src/llm_chat_archive/inventory/: agent_execution_inventory.json
src/llm_chat_archive/sources/: __init__.py  antigravity_editor_view.py  claude_code_cli.py  claude_code_ide.py  codex_app.py  codex_cli.py  codex_ide_extension.py  codex_rollout.py  cursor_cli.py  cursor_editor.py  gemini_cli.py  gemini_code_assist_ide.py
tests/: test_antigravity_editor_view.py  test_claude_code_cli.py  test_claude_code_ide.py  test_cli_smoke.py  test_codex_app.py  test_codex_cli.py  test_codex_ide_extension.py  test_cursor_cli.py  test_cursor_editor.py  test_gemini_cli.py  test_gemini_code_assist_ide.py
tests/fixtures/claude_code_cli/debug/: trace.txt
tests/fixtures/claude_code_cli/shell-snapshots/: session.sh
tests/fixtures/claude_code_ide/: .claude.json  history.jsonl  keybindings.json
tests/fixtures/gemini_cli/: google_accounts.json  mcp-oauth-tokens-v2.json  oauth_creds.json
(+44 files in other folders)
