[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "llm-chat-archive"
version = "0.1.0"
description = "Source-by-source local chat collectors normalized for memory-oriented archives."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
llm-chat-archive = "llm_chat_archive.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_chat_archive"]
